@@ -15,6 +15,8 @@
 	  sim/ucsim/avr.src/Makefile.in, sdas/as8051/Makefile.in,
 	  sdas/asz80/Makefile.in, sdas/linksrc/Makefile.in,
 	  sim/ucsim/main_in.mk: portable -Wall
+	* support/cpp/Makefile.in, support/cpp/libiberty/alloca.c:
+	  added alloca.c
 
 2010-03-15 Borut Razem <borut.razem AT siol.net>
 
